--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,37 +1,11 @@
 header {
-  background: var(--qwik-purple);
-}
-header {
   display: flex;
-  background: white;
-  border-bottom: 10px solid var(--qwik-dark-purple);
+  background: #222222ee;
+  align-items: center;
+  justify-content: center;
 }
 
-header .logo a {
-  display: inline-block;
-  padding: 10px 10px 7px 20px;
-}
-
-header ul {
-  margin: 0;
-  padding: 3px 10px 0 0;
-  list-style: none;
-  flex: 1;
-  text-align: right;
-}
-
-header li {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-header li a {
-  display: inline-block;
-  padding: 15px 10px;
-  text-decoration: none;
-}
-
-header li a:hover {
-  text-decoration: underline;
+header tt {
+  font-size: 2em;
+  color: #dabbffee;
 }
