--- a/src/routes/concertInfo.css
+++ b/src/routes/concertInfo.css
@@ -23,7 +23,10 @@
 .component-concertInfo .component-concertInfo--recordings {
   margin: 0;
   padding: 0;
+  width: 100%;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   list-style: none;
   justify-content: center;
   font-size: 0.8em;
@@ -41,6 +44,7 @@
 iframe {
   width: 100%;
   height: 25em;
+  margin-top: 0.5em;
   border: 0;
   box-shadow: inset -1px -1px 4px 4px #00000088;
   background: white;
