--- a/src/routes/home.css
+++ b/src/routes/home.css
@@ -15,4 +15,18 @@ h1 a {
 
 p {
   width: 100%;
+  text-align: center;
+}
+
+input {
+  margin: 0.2em;
+  border: 0;
+  padding: 0.1em;
+  font-size: 1.1em;
+  line-height: 1.9em;
+  text-align: center;
+  border-radius: 0.5em;
+}
+input:first-child {
+  direction: rtl; /* this might be a bad idea */
 }
