--- a/src/global.css
+++ b/src/global.css
@@ -47,26 +47,12 @@ a:hover {
   text-decoration: none;
 }
 
-table.commands {
-  margin: 0 0 30px 0;
-}
-
-.commands td {
-  padding: 5px;
-}
-
-.commands td:first-child {
-  white-space: nowrap;
-  padding-right: 20px;
-}
-
 code {
-  font-family: Menlo, Monaco, Courier New, monospace;
-  font-size: 0.9em;
-  background-color: rgb(224, 224, 224);
   padding: 2px 4px;
+  border: 2px solid #bfbfbf;
   border-radius: 3px;
-  border-bottom: 2px solid #bfbfbf;
+  font-size: 0.9em;
+  font-family: Inconsolata, Menlo, Monaco, Courier New, monospace;
 }
 
 footer {
@@ -75,10 +61,26 @@ footer {
   font-size: 0.8em;
 }
 
-footer a {
-  text-decoration: none;
+footer ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+footer li {
+  /* padding: 0; */
+}
+footer li:after {
+  content: '•';
+}
+footer li:last-child:after {
+  content: none;
 }
 
-footer a:hover {
-  text-decoration: underline;
+footer li > a {
+  padding: 0.5em;
+  text-decoration: none;
 }
