--- a/src/global.css
+++ b/src/global.css
@@ -25,18 +25,8 @@ h2 {
   margin: 0 0 5px 0;
 }
 
-.lightning {
-  filter: hue-rotate(180deg);
-}
-
 section {
   padding: 20px;
-}
-
-ul {
-  list-style-type: square;
-  margin: 5px 0 30px 0;
-  padding-left: 25px;
 }
 
 li {
@@ -47,18 +37,10 @@ a:hover {
   text-decoration: none;
 }
 
-code {
-  padding: 2px 4px;
-  border: 2px solid #bfbfbf;
-  border-radius: 3px;
-  font-size: 0.9em;
-  font-family: Inconsolata, Menlo, Monaco, Courier New, monospace;
-}
-
 footer {
   padding: 15px;
   text-align: center;
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 footer ul {
@@ -70,9 +52,6 @@ footer ul {
   flex-wrap: wrap;
   justify-content: center;
 }
-footer li {
-  /* padding: 0; */
-}
 footer li:after {
   content: '•';
 }
@@ -83,4 +62,12 @@ footer li:last-child:after {
 footer li > a {
   padding: 0.5em;
   text-decoration: none;
+}
+
+a.icon {
+  background: 0/contain no-repeat;
+  padding-left: 1.1em;
+}
+a.icon.github {
+  background-image: url(https://i.imgur.com/8Sp9Ndd.png);
 }
