--- a/src/routes/home.css
+++ b/src/routes/home.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 h1 {
@@ -18,15 +19,29 @@ p {
   text-align: center;
 }
 
-input {
+.component-datepicker {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.component-datepicker input {
+  width: 2.5em;
   margin: 0.2em;
   border: 0;
+  border-radius: 0.5em;
   padding: 0.1em;
   font-size: 1.1em;
   line-height: 1.9em;
   text-align: center;
-  border-radius: 0.5em;
 }
-input:first-child {
+.component-datepicker--month::after {
+  content: '/';
+  font-size: 1.2em;
+  line-height: 2em;
+}
+.component-datepicker--month input {
   direction: rtl; /* this might be a bad idea */
 }
