--- a/src/global.css
+++ b/src/global.css
@@ -1,11 +1,3 @@
-/**
- * WHAT IS THIS FILE?
- *
- * Globally applied styles. No matter which components are in the page or matching route,
- * the styles in here will be applied to the Document, without any sort of CSS scoping.
- *
- */
-
 body {
   background-color: #eee;
   font-family: 'Helvetica', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -36,8 +28,9 @@ hr {
   width: 50%;
 }
 
-li {
-  padding: 5px 0;
+p {
+  width: 100%;
+  text-align: center;
 }
 
 a:hover {
@@ -49,7 +42,6 @@ footer {
   text-align: center;
   font-size: 0.7em;
 }
-
 footer ul {
   margin: 0;
   padding: 0;
@@ -65,7 +57,6 @@ footer li:after {
 footer li:last-child:after {
   content: none;
 }
-
 footer li > a {
   padding: 0.5em;
   text-decoration: none;
